4545 Fix AiAgentUtilsSkillsTool skill ID type mismatch between schema and runtime
The array items were declared as string(skillId) in the schema but the
apply method expected Map items with a skillId key, so every saved
workflow failed to load skills. Align the schema and handler on
integer(skillId) so IDs travel as numbers end-to-end, dropping the
Map/parseLong defensive branch.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>